chore: rebrand SDD-Hoffy to Hoofy — rename module, binary, docs, add mascot logo
- Rename Go module path: github.com/HendryAvila/sdd-hoffy → github.com/HendryAvila/Hoofy
- Rename binary: sdd-hoffy → hoofy (cmd/, Makefile, goreleaser, install.sh, updater)
- Rename MCP server identity: sdd-hoffy → hoofy
- Rewrite README: shorter, prioritize memory/change pipeline, add centered mascot logo
- Update AGENTS.md with full project overview (memory, changes, memtools)
- Add project mascot to assets/logo.png
- Tool names (sdd_*) and prompt names (/sdd-*) unchanged — they describe the function, not the product
- All 396 tests passing, 0 lint issues

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,6 +1,6 @@
 version: 2
 
-project_name: sdd-hoffy
+project_name: hoofy
 
 before:
   hooks:
@@ -8,12 +8,12 @@ before:
     - go vet ./...
 
 builds:
-  - id: sdd-hoffy
-    main: ./cmd/sdd-hoffy/
-    binary: sdd-hoffy
+  - id: hoofy
+    main: ./cmd/hoofy/
+    binary: hoofy
     ldflags:
       - -s -w
-      - -X github.com/HendryAvila/sdd-hoffy/internal/server.Version={{.Version}}
+      - -X github.com/HendryAvila/Hoofy/internal/server.Version={{.Version}}
     env:
       - CGO_ENABLED=0
     goos:
@@ -49,7 +49,7 @@ changelog:
 release:
   github:
     owner: HendryAvila
-    name: sdd-hoffy
+    name: Hoofy
   draft: false
   prerelease: auto
   name_template: "v{{ .Version }}"
