fix: update CI workflow binary path from sdd-hoffy to hoofy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,4 +63,4 @@ jobs:
         run: make build
 
       - name: Verify binary runs
-        run: ./bin/sdd-hoffy --help
+        run: ./bin/hoofy --help
